# CBS-robot-boat

./: README.md
ros2_ws/: waypoints_map.html
ros2_ws/launch/: microfred.launch.py.backup  microfred_bak.launch.py  robot.launch.py
ros2_ws/src/gps_reader/: package.xml  setup.py
ros2_ws/src/imu/: package.xml  setup.py
ros2_ws/src/jetson_motor_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/microfred_joy/: CMakeLists.txt  package.xml
ros2_ws/src/microfred_joy/launch/: microfred.launch.py  microfred_joy.launch
ros2_ws/src/microfred_joy/src/: microfred_joy.cpp
ros2_ws/src/robot_localization_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/rtk_pub/: package.xml  setup.cfg  setup.py
ros2_ws/src/rtk_serial/: package.xml  setup.cfg  setup.py
ros2_ws/src/waypoint_nav/: package.xml  setup.py
ros2_ws/src/waypoint_nav_interfaces/: CMakeLists.txt  package.xml
rviz/: waypoints_line.csv
rviz/src/robot_description/: CMakeLists.txt  errors.txt
rviz/src/robot_description/config/: mapviz_config.yaml
rviz/src/robot_description/install/: local_setup.sh  setup.sh
rviz/src/robot_description/install/robot_description/lib/robot_description/: robot_visualizer.py
rviz/src/robot_description/install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
rviz/src/robot_description/install/robot_description/share/robot_description/: local_setup.sh  package.sh  package.xml
rviz/src/robot_description/install/robot_description/share/robot_description/launch/: display.launch.py
rviz/src/robot_description/install/robot_description/share/robot_description/rviz/: urdf.rviz
rviz/src/robot_description/install/robot_description/share/robot_description/urdf/: robot.urdf
rviz/src/robot_description/launch/: display.launch.py  display_and_cmd.launch.py
rviz/src/robot_description/rviz/: urdf.rviz
rviz/src/robot_description/scripts/: robot_visualizer.py
rviz/src/speed_logger/: package.xml  setup.cfg  setup.py
rviz/src/waypoint_loader/: package.xml  setup.cfg  setup.py
rviz/src/waypoint_nav_interfaces/: CMakeLists.txt
sim/microfred_platform_control/: CMakeLists.txt  package.xml
sim/microfred_platform_control/config/: TAM.yaml  (+5 more)
sim/microfred_platform_description/: CMakeLists.txt  package.xml
sim/microfred_world/: CMakeLists.txt  package.xml
(+83 files in other folders)
