<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microfred_joy</name>
  <version>0.0.0</version>
  <description>The microfred_joy package</description>
  <maintainer email="jovan@todo.todo">jovan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>